# ai_trader

./: .env  .gitignore  .slugignore  1. cryptobot_aggregate_sentiment-r1.py  2. cryptobot_direct_recommendation.py  3. solana_direct_recommendation.py  7. dip_contra_fees.py  BTC_stop_loss_data.json  Procfile  README.md  balance_fix_summary.py  bot_logs.txt  bot_status.json  finbert_utils.py  fix_summary.py  live_bot_alpaca.py  llmprompts.py  portfolio_data.json  portfolio_state.json  pyproject.toml  requirements.txt  server.py  server_logs.txt  start.sh  stock_bot_logs.txt  stock_trader.py  stock_trader_multi.py  test_position_fix.py  test_yahoo_finance.py  trades_log.json
.devcontainer/: devcontainer.json
logs/: CcxtBacktestingExampleStrategy_2025-01-06_08-42-03_logs.csv  CcxtBacktestingExampleStrategy_2025-01-06_08-42-03_stats.csv  CcxtBacktestingExampleStrategy_2025-01-06_08-42-08_settings.json  CcxtBacktestingExampleStrategy_2025-01-06_08-42-08_tearsheet.html  CcxtBacktestingExampleStrategy_2025-01-06_08-42-08_trades.csv  CcxtBacktestingExampleStrategy_2025-01-06_08-42-08_trades.html  CcxtBacktestingExampleStrategy_2025-01-06_08-57-39_logs.csv  CcxtBacktestingExampleStrategy_2025-01-06_08-57-44_tearsheet.html  CcxtBacktestingExampleStrategy_2025-01-06_08-57-44_trades.csv  CcxtBacktestingExampleStrategy_2025-01-06_08-57-44_trades.html  CryptoTrader_2025-01-16_09-34_up5Fzv_settings.json  CryptoTrader_2025-01-16_09-35_CC2IdB_settings.json  CryptoTrader_2025-01-16_09-35_CC2IdB_stats.csv  CryptoTrader_2025-01-16_09-35_CC2IdB_tearsheet.csv  (+637 more)
templates/: index.html
(+2 files in other folders)
